expresiones.output
Terminals which are not used

   VARIABLES


State 46 conflicts: 1 reduce/reduce


Grammar

    0 $accept: entrada $end

    1 entrada: /* empty */
    2        | zona_uno ESCENARIOS zona_escenarios
    3        | error

    4 zona_uno: zona_variables zona_asignacion zona_sensores zona_actuadores

    5 zona_variables: /* empty */
    6               | zona_variables TIPO_ENTERO id_var_enteros PUNTOCOMA
    7               | zona_variables TIPO_REAL id_var_reales PUNTOCOMA
    8               | zona_variables TIPO_TEXTO id_var_texto PUNTOCOMA
    9               | zona_variables TIPO_POSITION id_var_position PUNTOCOMA
   10               | error

   11 id_var_enteros: ID
   12               | id_var_enteros COMA ID

   13 id_var_reales: ID
   14              | id_var_reales COMA ID

   15 id_var_texto: ID
   16             | id_var_texto COMA ID

   17 id_var_position: ID
   18                | id_var_position COMA ID

   19 zona_asignacion: /* empty */
   20                | zona_asignacion asignacion

   21 asignacion: ID '=' expr PUNTOCOMA
   22           | ID '=' exprTexto PUNTOCOMA
   23           | ID '=' exprPosition PUNTOCOMA

   24 expr: ENTERO
   25     | REAL
   26     | ID
   27     | expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | expr '%' expr
   32     | expr '^' expr
   33     | '(' expr ')'
   34     | '+' expr
   35     | '-' expr

   36 exprLogica: LOGICA
   37           | expr INI_CONO expr
   38           | expr END_CONO expr
   39           | expr '<' '=' expr
   40           | expr '>' '=' expr
   41           | expr '=' '=' expr
   42           | expr '!' '=' expr
   43           | '(' exprLogica ')'
   44           | '!' exprLogica
   45           | exprLogica '&' '&' exprLogica
   46           | exprLogica '|' '|' exprLogica

   47 exprTexto: CADENA

   48 exprPosition: INI_CONO expr COMA expr END_CONO
   49             | ID

   50 zona_sensores: /* empty */
   51              | zona_sensores TIPO_TEMPERATURE var_temperature PUNTOCOMA
   52              | zona_sensores TIPO_LIGHT var_light PUNTOCOMA
   53              | zona_sensores TIPO_SMOKE var_smoke PUNTOCOMA

   54 var_temperature: ID exprPosition CADENA

   55 var_light: ID exprPosition CADENA

   56 var_smoke: ID exprPosition CADENA

   57 zona_actuadores: /* empty */
   58                | zona_actuadores TIPO_ALARM var_alarm PUNTOCOMA
   59                | zona_actuadores TIPO_SWITCH var_switch PUNTOCOMA
   60                | zona_actuadores TIPO_MESSAGE var_message PUNTOCOMA

   61 var_alarm: ID

   62 var_switch: ID exprPosition CADENA

   63 var_message: ID

   64 zona_escenarios: /* empty */
   65                | zona_escenarios SCENE escena INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA

   66 escena: ID

   67 comportamiento_variables: /* empty */
   68                         | comportamiento_variables START PUNTOCOMA
   69                         | comportamiento_variables PAUSE var_pause PUNTOCOMA
   70                         | comportamiento_variables REPEAT bucle INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA
   71                         | comportamiento_variables id_var_action PUNTOCOMA
   72                         | comportamiento_variables var_detection PUNTOCOMA
   73                         | comportamiento_variables IF exprLogica THEN INI_BRACKET comportamiento_variables END_BRACKET condicion_else

   74 condicion_else: PUNTOCOMA
   75               | ELSE INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA

   76 bucle: expr

   77 var_detection: ID expr

   78 var_pause: /* empty */
   79          | expr

   80 id_var_action: ID ACTION CADENA
   81              | ID CADENA
   82              | ID ACTION ID
   83              | ID ACTION


Terminals, with rules where they appear

$end (0) 0
'!' (33) 42 44
'%' (37) 31
'&' (38) 45
'(' (40) 33 43
')' (41) 33 43
'*' (42) 29
'+' (43) 27 34
'-' (45) 28 35
'/' (47) 30
'<' (60) 39
'=' (61) 21 22 23 39 40 41 42
'>' (62) 40
'^' (94) 32
'|' (124) 46
error (256) 3 10
TIPO_ENTERO (258) 6
TIPO_REAL (259) 7
TIPO_TEXTO (260) 8
TIPO_POSITION (261) 9
TIPO_TEMPERATURE (262) 51
TIPO_LIGHT (263) 52
TIPO_SMOKE (264) 53
TIPO_ALARM (265) 58
TIPO_SWITCH (266) 59
TIPO_MESSAGE (267) 60
ENTERO (268) 24
REAL (269) 25
LOGICA (270) 36
ID (271) 11 12 13 14 15 16 17 18 21 22 23 26 49 54 55 56 61 62 63 66
    77 80 81 82 83
COMA (272) 12 14 16 18 48
PUNTOCOMA (273) 6 7 8 9 21 22 23 51 52 53 58 59 60 65 68 69 70 71 72
    74 75
CADENA (274) 47 54 55 56 62 80 81
ESCENARIOS (275) 2
START (276) 68
PAUSE (277) 69
REPEAT (278) 70
SCENE (279) 65
ACTION (280) 80 82 83
IF (281) 73
THEN (282) 73
ELSE (283) 75
INI_CONO (284) 37 48
END_CONO (285) 38 48
INI_BRACKET (286) 65 70 73 75
END_BRACKET (287) 65 70 73 75
VARIABLES (288)
sim_positivo (289)
sim_negativo (290)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
entrada (51)
    on left: 1 2 3, on right: 0
zona_uno (52)
    on left: 4, on right: 2
zona_variables (53)
    on left: 5 6 7 8 9 10, on right: 4 6 7 8 9
id_var_enteros (54)
    on left: 11 12, on right: 6 12
id_var_reales (55)
    on left: 13 14, on right: 7 14
id_var_texto (56)
    on left: 15 16, on right: 8 16
id_var_position (57)
    on left: 17 18, on right: 9 18
zona_asignacion (58)
    on left: 19 20, on right: 4 20
asignacion (59)
    on left: 21 22 23, on right: 20
expr (60)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35, on right: 21 27 28
    29 30 31 32 33 34 35 37 38 39 40 41 42 48 76 77 79
exprLogica (61)
    on left: 36 37 38 39 40 41 42 43 44 45 46, on right: 43 44 45 46
    73
exprTexto (62)
    on left: 47, on right: 22
exprPosition (63)
    on left: 48 49, on right: 23 54 55 56 62
zona_sensores (64)
    on left: 50 51 52 53, on right: 4 51 52 53
var_temperature (65)
    on left: 54, on right: 51
var_light (66)
    on left: 55, on right: 52
var_smoke (67)
    on left: 56, on right: 53
zona_actuadores (68)
    on left: 57 58 59 60, on right: 4 58 59 60
var_alarm (69)
    on left: 61, on right: 58
var_switch (70)
    on left: 62, on right: 59
var_message (71)
    on left: 63, on right: 60
zona_escenarios (72)
    on left: 64 65, on right: 2 65
escena (73)
    on left: 66, on right: 65
comportamiento_variables (74)
    on left: 67 68 69 70 71 72 73, on right: 65 68 69 70 71 72 73 75
condicion_else (75)
    on left: 74 75, on right: 73
bucle (76)
    on left: 76, on right: 70
var_detection (77)
    on left: 77, on right: 72
var_pause (78)
    on left: 78 79, on right: 69
id_var_action (79)
    on left: 80 81 82 83, on right: 71


state 0

    0 $accept: . entrada $end

    error  shift, and go to state 1

    $end              reduce using rule 1 (entrada)
    TIPO_ENTERO       reduce using rule 5 (zona_variables)
    TIPO_REAL         reduce using rule 5 (zona_variables)
    TIPO_TEXTO        reduce using rule 5 (zona_variables)
    TIPO_POSITION     reduce using rule 5 (zona_variables)
    TIPO_TEMPERATURE  reduce using rule 5 (zona_variables)
    TIPO_LIGHT        reduce using rule 5 (zona_variables)
    TIPO_SMOKE        reduce using rule 5 (zona_variables)
    TIPO_ALARM        reduce using rule 5 (zona_variables)
    TIPO_SWITCH       reduce using rule 5 (zona_variables)
    TIPO_MESSAGE      reduce using rule 5 (zona_variables)
    ID                reduce using rule 5 (zona_variables)
    ESCENARIOS        reduce using rule 5 (zona_variables)

    entrada         go to state 2
    zona_uno        go to state 3
    zona_variables  go to state 4


state 1

    3 entrada: error .
   10 zona_variables: error .

    $end      reduce using rule 3 (entrada)
    $default  reduce using rule 10 (zona_variables)


state 2

    0 $accept: entrada . $end

    $end  shift, and go to state 5


state 3

    2 entrada: zona_uno . ESCENARIOS zona_escenarios

    ESCENARIOS  shift, and go to state 6


state 4

    4 zona_uno: zona_variables . zona_asignacion zona_sensores zona_actuadores
    6 zona_variables: zona_variables . TIPO_ENTERO id_var_enteros PUNTOCOMA
    7               | zona_variables . TIPO_REAL id_var_reales PUNTOCOMA
    8               | zona_variables . TIPO_TEXTO id_var_texto PUNTOCOMA
    9               | zona_variables . TIPO_POSITION id_var_position PUNTOCOMA

    TIPO_ENTERO    shift, and go to state 7
    TIPO_REAL      shift, and go to state 8
    TIPO_TEXTO     shift, and go to state 9
    TIPO_POSITION  shift, and go to state 10

    $default  reduce using rule 19 (zona_asignacion)

    zona_asignacion  go to state 11


state 5

    0 $accept: entrada $end .

    $default  accept


state 6

    2 entrada: zona_uno ESCENARIOS . zona_escenarios

    $default  reduce using rule 64 (zona_escenarios)

    zona_escenarios  go to state 12


state 7

    6 zona_variables: zona_variables TIPO_ENTERO . id_var_enteros PUNTOCOMA

    ID  shift, and go to state 13

    id_var_enteros  go to state 14


state 8

    7 zona_variables: zona_variables TIPO_REAL . id_var_reales PUNTOCOMA

    ID  shift, and go to state 15

    id_var_reales  go to state 16


state 9

    8 zona_variables: zona_variables TIPO_TEXTO . id_var_texto PUNTOCOMA

    ID  shift, and go to state 17

    id_var_texto  go to state 18


state 10

    9 zona_variables: zona_variables TIPO_POSITION . id_var_position PUNTOCOMA

    ID  shift, and go to state 19

    id_var_position  go to state 20


state 11

    4 zona_uno: zona_variables zona_asignacion . zona_sensores zona_actuadores
   20 zona_asignacion: zona_asignacion . asignacion

    ID  shift, and go to state 21

    $default  reduce using rule 50 (zona_sensores)

    asignacion     go to state 22
    zona_sensores  go to state 23


state 12

    2 entrada: zona_uno ESCENARIOS zona_escenarios .
   65 zona_escenarios: zona_escenarios . SCENE escena INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA

    SCENE  shift, and go to state 24

    $default  reduce using rule 2 (entrada)


state 13

   11 id_var_enteros: ID .

    $default  reduce using rule 11 (id_var_enteros)


state 14

    6 zona_variables: zona_variables TIPO_ENTERO id_var_enteros . PUNTOCOMA
   12 id_var_enteros: id_var_enteros . COMA ID

    COMA       shift, and go to state 25
    PUNTOCOMA  shift, and go to state 26


state 15

   13 id_var_reales: ID .

    $default  reduce using rule 13 (id_var_reales)


state 16

    7 zona_variables: zona_variables TIPO_REAL id_var_reales . PUNTOCOMA
   14 id_var_reales: id_var_reales . COMA ID

    COMA       shift, and go to state 27
    PUNTOCOMA  shift, and go to state 28


state 17

   15 id_var_texto: ID .

    $default  reduce using rule 15 (id_var_texto)


state 18

    8 zona_variables: zona_variables TIPO_TEXTO id_var_texto . PUNTOCOMA
   16 id_var_texto: id_var_texto . COMA ID

    COMA       shift, and go to state 29
    PUNTOCOMA  shift, and go to state 30


state 19

   17 id_var_position: ID .

    $default  reduce using rule 17 (id_var_position)


state 20

    9 zona_variables: zona_variables TIPO_POSITION id_var_position . PUNTOCOMA
   18 id_var_position: id_var_position . COMA ID

    COMA       shift, and go to state 31
    PUNTOCOMA  shift, and go to state 32


state 21

   21 asignacion: ID . '=' expr PUNTOCOMA
   22           | ID . '=' exprTexto PUNTOCOMA
   23           | ID . '=' exprPosition PUNTOCOMA

    '='  shift, and go to state 33


state 22

   20 zona_asignacion: zona_asignacion asignacion .

    $default  reduce using rule 20 (zona_asignacion)


state 23

    4 zona_uno: zona_variables zona_asignacion zona_sensores . zona_actuadores
   51 zona_sensores: zona_sensores . TIPO_TEMPERATURE var_temperature PUNTOCOMA
   52              | zona_sensores . TIPO_LIGHT var_light PUNTOCOMA
   53              | zona_sensores . TIPO_SMOKE var_smoke PUNTOCOMA

    TIPO_TEMPERATURE  shift, and go to state 34
    TIPO_LIGHT        shift, and go to state 35
    TIPO_SMOKE        shift, and go to state 36

    $default  reduce using rule 57 (zona_actuadores)

    zona_actuadores  go to state 37


state 24

   65 zona_escenarios: zona_escenarios SCENE . escena INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA

    ID  shift, and go to state 38

    escena  go to state 39


state 25

   12 id_var_enteros: id_var_enteros COMA . ID

    ID  shift, and go to state 40


state 26

    6 zona_variables: zona_variables TIPO_ENTERO id_var_enteros PUNTOCOMA .

    $default  reduce using rule 6 (zona_variables)


state 27

   14 id_var_reales: id_var_reales COMA . ID

    ID  shift, and go to state 41


state 28

    7 zona_variables: zona_variables TIPO_REAL id_var_reales PUNTOCOMA .

    $default  reduce using rule 7 (zona_variables)


state 29

   16 id_var_texto: id_var_texto COMA . ID

    ID  shift, and go to state 42


state 30

    8 zona_variables: zona_variables TIPO_TEXTO id_var_texto PUNTOCOMA .

    $default  reduce using rule 8 (zona_variables)


state 31

   18 id_var_position: id_var_position COMA . ID

    ID  shift, and go to state 43


state 32

    9 zona_variables: zona_variables TIPO_POSITION id_var_position PUNTOCOMA .

    $default  reduce using rule 9 (zona_variables)


state 33

   21 asignacion: ID '=' . expr PUNTOCOMA
   22           | ID '=' . exprTexto PUNTOCOMA
   23           | ID '=' . exprPosition PUNTOCOMA

    ENTERO    shift, and go to state 44
    REAL      shift, and go to state 45
    ID        shift, and go to state 46
    CADENA    shift, and go to state 47
    INI_CONO  shift, and go to state 48
    '+'       shift, and go to state 49
    '-'       shift, and go to state 50
    '('       shift, and go to state 51

    expr          go to state 52
    exprTexto     go to state 53
    exprPosition  go to state 54


state 34

   51 zona_sensores: zona_sensores TIPO_TEMPERATURE . var_temperature PUNTOCOMA

    ID  shift, and go to state 55

    var_temperature  go to state 56


state 35

   52 zona_sensores: zona_sensores TIPO_LIGHT . var_light PUNTOCOMA

    ID  shift, and go to state 57

    var_light  go to state 58


state 36

   53 zona_sensores: zona_sensores TIPO_SMOKE . var_smoke PUNTOCOMA

    ID  shift, and go to state 59

    var_smoke  go to state 60


state 37

    4 zona_uno: zona_variables zona_asignacion zona_sensores zona_actuadores .
   58 zona_actuadores: zona_actuadores . TIPO_ALARM var_alarm PUNTOCOMA
   59                | zona_actuadores . TIPO_SWITCH var_switch PUNTOCOMA
   60                | zona_actuadores . TIPO_MESSAGE var_message PUNTOCOMA

    TIPO_ALARM    shift, and go to state 61
    TIPO_SWITCH   shift, and go to state 62
    TIPO_MESSAGE  shift, and go to state 63

    $default  reduce using rule 4 (zona_uno)


state 38

   66 escena: ID .

    $default  reduce using rule 66 (escena)


state 39

   65 zona_escenarios: zona_escenarios SCENE escena . INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA

    INI_BRACKET  shift, and go to state 64


state 40

   12 id_var_enteros: id_var_enteros COMA ID .

    $default  reduce using rule 12 (id_var_enteros)


state 41

   14 id_var_reales: id_var_reales COMA ID .

    $default  reduce using rule 14 (id_var_reales)


state 42

   16 id_var_texto: id_var_texto COMA ID .

    $default  reduce using rule 16 (id_var_texto)


state 43

   18 id_var_position: id_var_position COMA ID .

    $default  reduce using rule 18 (id_var_position)


state 44

   24 expr: ENTERO .

    $default  reduce using rule 24 (expr)


state 45

   25 expr: REAL .

    $default  reduce using rule 25 (expr)


state 46

   26 expr: ID .
   49 exprPosition: ID .

    PUNTOCOMA  reduce using rule 26 (expr)
    PUNTOCOMA  [reduce using rule 49 (exprPosition)]
    $default   reduce using rule 26 (expr)


state 47

   47 exprTexto: CADENA .

    $default  reduce using rule 47 (exprTexto)


state 48

   48 exprPosition: INI_CONO . expr COMA expr END_CONO

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 66


state 49

   34 expr: '+' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 67


state 50

   35 expr: '-' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 68


state 51

   33 expr: '(' . expr ')'

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 69


state 52

   21 asignacion: ID '=' expr . PUNTOCOMA
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr

    PUNTOCOMA  shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '%'        shift, and go to state 75
    '^'        shift, and go to state 76


state 53

   22 asignacion: ID '=' exprTexto . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 77


state 54

   23 asignacion: ID '=' exprPosition . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 78


state 55

   54 var_temperature: ID . exprPosition CADENA

    ID        shift, and go to state 79
    INI_CONO  shift, and go to state 48

    exprPosition  go to state 80


state 56

   51 zona_sensores: zona_sensores TIPO_TEMPERATURE var_temperature . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 81


state 57

   55 var_light: ID . exprPosition CADENA

    ID        shift, and go to state 79
    INI_CONO  shift, and go to state 48

    exprPosition  go to state 82


state 58

   52 zona_sensores: zona_sensores TIPO_LIGHT var_light . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 83


state 59

   56 var_smoke: ID . exprPosition CADENA

    ID        shift, and go to state 79
    INI_CONO  shift, and go to state 48

    exprPosition  go to state 84


state 60

   53 zona_sensores: zona_sensores TIPO_SMOKE var_smoke . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 85


state 61

   58 zona_actuadores: zona_actuadores TIPO_ALARM . var_alarm PUNTOCOMA

    ID  shift, and go to state 86

    var_alarm  go to state 87


state 62

   59 zona_actuadores: zona_actuadores TIPO_SWITCH . var_switch PUNTOCOMA

    ID  shift, and go to state 88

    var_switch  go to state 89


state 63

   60 zona_actuadores: zona_actuadores TIPO_MESSAGE . var_message PUNTOCOMA

    ID  shift, and go to state 90

    var_message  go to state 91


state 64

   65 zona_escenarios: zona_escenarios SCENE escena INI_BRACKET . comportamiento_variables END_BRACKET PUNTOCOMA

    $default  reduce using rule 67 (comportamiento_variables)

    comportamiento_variables  go to state 92


state 65

   26 expr: ID .

    $default  reduce using rule 26 (expr)


state 66

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   48 exprPosition: INI_CONO expr . COMA expr END_CONO

    COMA  shift, and go to state 93
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '%'   shift, and go to state 75
    '^'   shift, and go to state 76


state 67

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   34     | '+' expr .

    $default  reduce using rule 34 (expr)


state 68

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   35     | '-' expr .

    $default  reduce using rule 35 (expr)


state 69

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   33     | '(' expr . ')'

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76
    ')'  shift, and go to state 94


state 70

   21 asignacion: ID '=' expr PUNTOCOMA .

    $default  reduce using rule 21 (asignacion)


state 71

   27 expr: expr '+' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 95


state 72

   28 expr: expr '-' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 96


state 73

   29 expr: expr '*' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 97


state 74

   30 expr: expr '/' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 98


state 75

   31 expr: expr '%' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 99


state 76

   32 expr: expr '^' . expr

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 100


state 77

   22 asignacion: ID '=' exprTexto PUNTOCOMA .

    $default  reduce using rule 22 (asignacion)


state 78

   23 asignacion: ID '=' exprPosition PUNTOCOMA .

    $default  reduce using rule 23 (asignacion)


state 79

   49 exprPosition: ID .

    $default  reduce using rule 49 (exprPosition)


state 80

   54 var_temperature: ID exprPosition . CADENA

    CADENA  shift, and go to state 101


state 81

   51 zona_sensores: zona_sensores TIPO_TEMPERATURE var_temperature PUNTOCOMA .

    $default  reduce using rule 51 (zona_sensores)


state 82

   55 var_light: ID exprPosition . CADENA

    CADENA  shift, and go to state 102


state 83

   52 zona_sensores: zona_sensores TIPO_LIGHT var_light PUNTOCOMA .

    $default  reduce using rule 52 (zona_sensores)


state 84

   56 var_smoke: ID exprPosition . CADENA

    CADENA  shift, and go to state 103


state 85

   53 zona_sensores: zona_sensores TIPO_SMOKE var_smoke PUNTOCOMA .

    $default  reduce using rule 53 (zona_sensores)


state 86

   61 var_alarm: ID .

    $default  reduce using rule 61 (var_alarm)


state 87

   58 zona_actuadores: zona_actuadores TIPO_ALARM var_alarm . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 104


state 88

   62 var_switch: ID . exprPosition CADENA

    ID        shift, and go to state 79
    INI_CONO  shift, and go to state 48

    exprPosition  go to state 105


state 89

   59 zona_actuadores: zona_actuadores TIPO_SWITCH var_switch . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 106


state 90

   63 var_message: ID .

    $default  reduce using rule 63 (var_message)


state 91

   60 zona_actuadores: zona_actuadores TIPO_MESSAGE var_message . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 107


state 92

   65 zona_escenarios: zona_escenarios SCENE escena INI_BRACKET comportamiento_variables . END_BRACKET PUNTOCOMA
   68 comportamiento_variables: comportamiento_variables . START PUNTOCOMA
   69                         | comportamiento_variables . PAUSE var_pause PUNTOCOMA
   70                         | comportamiento_variables . REPEAT bucle INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA
   71                         | comportamiento_variables . id_var_action PUNTOCOMA
   72                         | comportamiento_variables . var_detection PUNTOCOMA
   73                         | comportamiento_variables . IF exprLogica THEN INI_BRACKET comportamiento_variables END_BRACKET condicion_else

    ID           shift, and go to state 108
    START        shift, and go to state 109
    PAUSE        shift, and go to state 110
    REPEAT       shift, and go to state 111
    IF           shift, and go to state 112
    END_BRACKET  shift, and go to state 113

    var_detection  go to state 114
    id_var_action  go to state 115


state 93

   48 exprPosition: INI_CONO expr COMA . expr END_CONO

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 116


state 94

   33 expr: '(' expr ')' .

    $default  reduce using rule 33 (expr)


state 95

   27 expr: expr . '+' expr
   27     | expr '+' expr .
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76

    $default  reduce using rule 27 (expr)


state 96

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   28     | expr '-' expr .
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76

    $default  reduce using rule 28 (expr)


state 97

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   29     | expr '*' expr .
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr

    '^'  shift, and go to state 76

    $default  reduce using rule 29 (expr)


state 98

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   30     | expr '/' expr .
   31     | expr . '%' expr
   32     | expr . '^' expr

    '^'  shift, and go to state 76

    $default  reduce using rule 30 (expr)


state 99

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   31     | expr '%' expr .
   32     | expr . '^' expr

    '^'  shift, and go to state 76

    $default  reduce using rule 31 (expr)


state 100

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   32     | expr '^' expr .

    '^'  shift, and go to state 76

    $default  reduce using rule 32 (expr)


state 101

   54 var_temperature: ID exprPosition CADENA .

    $default  reduce using rule 54 (var_temperature)


state 102

   55 var_light: ID exprPosition CADENA .

    $default  reduce using rule 55 (var_light)


state 103

   56 var_smoke: ID exprPosition CADENA .

    $default  reduce using rule 56 (var_smoke)


state 104

   58 zona_actuadores: zona_actuadores TIPO_ALARM var_alarm PUNTOCOMA .

    $default  reduce using rule 58 (zona_actuadores)


state 105

   62 var_switch: ID exprPosition . CADENA

    CADENA  shift, and go to state 117


state 106

   59 zona_actuadores: zona_actuadores TIPO_SWITCH var_switch PUNTOCOMA .

    $default  reduce using rule 59 (zona_actuadores)


state 107

   60 zona_actuadores: zona_actuadores TIPO_MESSAGE var_message PUNTOCOMA .

    $default  reduce using rule 60 (zona_actuadores)


state 108

   77 var_detection: ID . expr
   80 id_var_action: ID . ACTION CADENA
   81              | ID . CADENA
   82              | ID . ACTION ID
   83              | ID . ACTION

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    CADENA  shift, and go to state 118
    ACTION  shift, and go to state 119
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr  go to state 120


state 109

   68 comportamiento_variables: comportamiento_variables START . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 121


state 110

   69 comportamiento_variables: comportamiento_variables PAUSE . var_pause PUNTOCOMA

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    $default  reduce using rule 78 (var_pause)

    expr       go to state 122
    var_pause  go to state 123


state 111

   70 comportamiento_variables: comportamiento_variables REPEAT . bucle INI_BRACKET comportamiento_variables END_BRACKET PUNTOCOMA

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    ID      shift, and go to state 65
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 51

    expr   go to state 124
    bucle  go to state 125


state 112

   73 comportamiento_variables: comportamiento_variables IF . exprLogica THEN INI_BRACKET comportamiento_variables END_BRACKET condicion_else

    ENTERO  shift, and go to state 44
    REAL    shift, and go to state 45
    LOGICA  shift, and go to state 126
    ID      shift, and go to state 65
    '!'     shift, and go to state 127
    '+'     shift, and go to state 49
    '-'     shift, and go to state 50
    '('     shift, and go to state 128

    expr        go to state 129
    exprLogica  go to state 130


state 113

   65 zona_escenarios: zona_escenarios SCENE escena INI_BRACKET comportamiento_variables END_BRACKET . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 131


state 114

   72 comportamiento_variables: comportamiento_variables var_detection . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 132


state 115

   71 comportamiento_variables: comportamiento_variables id_var_action . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 133


state 116

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   48 exprPosition: INI_CONO expr COMA expr . END_CONO

    END_CONO  shift, and go to state 134
    '+'       shift, and go to state 71
    '-'       shift, and go to state 72
    '*'       shift, and go to state 73
    '/'       shift, and go to state 74
    '%'       shift, and go to state 75
    '^'       shift, and go to state 76


state 117

   62 var_switch: ID exprPosition CADENA .

    $default  reduce using rule 62 (var_switch)


state 118

   81 id_var_action: ID CADENA .

    $default  reduce using rule 81 (id_var_action)


state 119

   80 id_var_action: ID ACTION . CADENA
   82              | ID ACTION . ID
   83              | ID ACTION .

    ID      shift, and go to state 135
    CADENA  shift, and go to state 136

    $default  reduce using rule 83 (id_var_action)


state 120

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   77 var_detection: ID expr .

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76

    $default  reduce using rule 77 (var_detection)


state 121

   68 comportamiento_variables: comportamiento_variables START PUNTOCOMA .

    $default  reduce using rule 68 (comportamiento_variables)


state 122

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | expr . '%' expr
   32     | expr . '^' expr
   79 var_pause: expr .
